        * Moved network services to /lib/network-services
        * Moved network configuration files to /etc/network
        * Moved ifup and ifdown scripts to /sbin
        * ifup - copy network configuration scritps to /run on startup
        * ifdown - use running configuration stored in /run to stop interfaces
        * Moved sysconfig files to /etc/default

20110424 - [dj]
        * Sync to LFS-Bootscripts-20110424 (move new run mounts and
          symlinks [bdubbs]).

20110418 - [bdubbs]
        * lfs/init.d/mountvirtfs: Change name from mountkernfs to
          mountvirtfs.
        * Add mounting of /run filesystem.

20101012 - [dj]
        * Added udev to Required-Start for swap script.

20100823 - [dj]
        * Fix missing 'then' in sendsignals conditionals.  Thanks to
          Jeremy Huntwork for the report and correction.

20100627 - [dj]
        * Sync to LFS-Bootscripts-20100627 (killall in new sysvinit).
        * Standardized syntax for integer comparisons in tests.

20100529 - [matthew]
        * Only copy /lib/udev/devices/null, as Udev >= 155 copies
          devices from /lib/udev/devices to /dev itself.
          Udevd still needs /dev/null present before starting up though.

20100529 - [dj]
        * Sync to LFS-Bootscirpts-20100529
        * Add test if /dev is already mounted in udev script.
        * Added --action=add to udevadmin trigger lines of udev script.

20100427 - [dj]
        * Removed unneeded X-LFS-Default* lines.
        * Corrected udev_retry script for new udev.
        * Corrected path of syslogd and klogd in sysklogd script.

20090325 - [dj]
        * Corrected serveral echo commands missing -e - Thanks to
          Michael Tremer at IPFire for the corrections.

20081023 - [dj]
        * Removed BROKEN_COMPOSE handling in console script because
          kernel patch was accepted upstream.

20080908 - [dj]
        * Corrected echo command in rc script - Thanks to 
          Michael Tremer at IPFire.

20080907 - [dj]